--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="Форма ОП-10" Height="1400" Width="1400">
+        Title="Форма ОП-10" Height="1400" Width="1420">
     
     <Window.Resources>
         <x:Array x:Key="KitchenItemsList" Type="sys:String" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -126,7 +126,7 @@
           CanUserDeleteRows="True"
           IsReadOnly="False"
           Margin="0,20,0,0"
-          Height="300"
+          Height="386"
           ItemsSource="{Binding KitchenItems}">
 
         <DataGrid.Columns>
@@ -184,11 +184,16 @@
                     <DataGridTextColumn Header="Сумма (всего)" Width="80" Binding="{Binding SumTotal}"/>
                     <DataGridTextColumn Header="Цена (учёт)" Width="80" Binding="{Binding AccountingPrice}"/>
                     <DataGridTextColumn Header="Сумма (учёт)" Width="80" Binding="{Binding AccountingSum}"/>
+                    <DataGridTextColumn Header="Цена (учёт)" Width="80" Binding="{Binding PricePrice}"/>
+                    <DataGridTextColumn Header="Сумма (учёт)" Width="80" Binding="{Binding PriceSum}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
             <Button Content="Добавить строку +" Width="150" Height="30" Margin="0,10,0,0"
             Click="AddRowButton_Click" HorizontalAlignment="Center"/>
+
+            <Button Content="Удалить строку +" Width="150" Height="30" Margin="0,10,0,0"
+            Click="DeleteRowButton_Click" HorizontalAlignment="Center"/>
 
             <!-- Итого -->
             <TextBlock Text="Итого" FontWeight="Bold" Margin="0,10,0,0"/>
