--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="Форма ОП-10" Height="1400" Width="1420">
+        Title="Форма ОП-10" Height="1542" Width="1420">
     
     <Window.Resources>
         <x:Array x:Key="KitchenItemsList" Type="sys:String" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -69,22 +69,18 @@
                     <TextBlock Text="Должность: "/>
                     <TextBox Name="PositionTextBox" Width="150" Height="20"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,40,0">
-                    <TextBox Name="SignatureTextBox" Width="100" Margin="5,0"/>
-                    <TextBox Name="SignatureNameTextBox" Width="150" Margin="5,0"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,15,40,0">
+                    <TextBlock Text="___________________    "/>
+                    <TextBlock Text="__________________________________________"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,40,0">
-                    <TextBlock Text="(подпись)          "/>
-                    <TextBlock Text="(расшифровка подписи)    "/>
+                    <TextBlock Text="(подпись)                         "/>
+                    <TextBlock Text="(расшифровка подписи)         "/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,40,0">
-                    <TextBlock Text="Дата: "/>
-                    <TextBox Name="DateDayTextBox" Width="30" MaxLength="2" Margin="5,0"/>
-                    <TextBlock Text="дн." Margin="5,0"/>
-                    <TextBox Name="DateMonthTextBox" Width="60" MaxLength="15" Margin="5,0"/>
-                    <TextBlock Text="мес." Margin="5,0"/>
-                    <TextBox Name="DateYearTextBox" Width="60" MaxLength="4" Margin="5,0"/>
-                    <TextBlock Text="г." Margin="5,0"/>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,40,0">
+                    <TextBlock Text="Дата: " VerticalAlignment="Center"/>
+                    <DatePicker Name="ApprovalDatePicker" Width="150" Height="25" VerticalAlignment="Center"/>
                 </StackPanel>
             </StackPanel>
 
@@ -103,20 +99,24 @@
             <!-- Название документа -->
             <StackPanel Margin="0,10,0,0" HorizontalAlignment="Center">
                 <TextBlock Text="АКТ" FontSize="16" FontWeight="Bold" TextAlignment="Center"/>
+                <!-- Номер документа и дата -->
+                
+                    
+                        <TextBlock Text="Номер документа" FontSize="12"/>
+                        <TextBox Name="DocumentNumberTextBox" Width="150" Height="25"/>
+                    
+                    
+                        <TextBlock Text="Дата составления" FontSize="12"/>
+                        <DatePicker Name="ApprovalDatePicker2" Width="150" Height="25" VerticalAlignment="Center"/>
+
+
+            </StackPanel>
+            
+            <StackPanel Margin="0,10,0,0" HorizontalAlignment="Center">
                 <TextBlock Text="О РЕАЛИЗАЦИИ И ОТПУСКЕ ИЗДЕЛИЙ КУХНИ" FontSize="16" FontWeight="Bold" TextAlignment="Center"/>
             </StackPanel>
 
-            <!-- Номер документа и дата -->
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <StackPanel Margin="0,0,20,0">
-                    <TextBlock Text="Номер документа" FontSize="12"/>
-                    <TextBox Name="DocumentNumberTextBox" Width="150" Height="25"/>
-                </StackPanel>
-                <StackPanel>
-                    <TextBlock Text="Дата составления" FontSize="12"/>
-                    <TextBox Name="DocumentDateTextBox" Width="150" Height="25"/>
-                </StackPanel>
-            </StackPanel>
+            
 
             <!-- Таблица -->
             <DataGrid x:Name="KitchenDataGrid"
@@ -196,10 +196,10 @@
             Click="DeleteRowButton_Click" HorizontalAlignment="Center"/>
 
             <!-- Итого -->
-            <TextBlock Text="Итого" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="Итого" FontWeight="Bold" Margin="0,20,0,0"/>
 
             <!-- Получено от посетителей -->
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+            <StackPanel Orientation="Horizontal" Margin="0,15,0,0">
                 <TextBlock Text="Получено за приготовление блюд из продуктов посетителей:" Width="400"/>
                 <TextBox Name="ReceivedRubTextBox" Width="100"/>
                 <TextBlock Text="руб.   " Margin="10,0,0,0"/>
@@ -208,34 +208,34 @@
             </StackPanel>
 
             <!-- Итого за день -->
-            <TextBlock Text="Итого реализовано, отпущено и оказано услуг за отчётный день" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="Итого реализовано, отпущено и оказано услуг за отчётный день" FontWeight="Bold" Margin="0,15,0,0"/>
             <StackPanel Orientation="Horizontal">
-                <TextBox Name="TotalRubTextBox" Width="100"/>
-                <TextBlock Text="руб.   " Margin="10,0,0,0"/>
-                <TextBox Name="TotalKopTextBox" Width="50"/>
-                <TextBlock Text="коп." Margin="10,0,0,0"/>
+                <TextBox Name="TotalRubTextBox" Width="100" Margin="0,15,0,0"/>
+                <TextBlock Text="руб.   " Margin="10,15,0,0"/>
+                <TextBox Name="TotalKopTextBox" Width="50" Margin="0,15,0,0"/>
+                <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
 
             <!-- Справка по расходу -->
-            <TextBlock Text="СПРАВКА: Израсходовано на приготовление блюд" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="СПРАВКА: Израсходовано на приготовление блюд" FontWeight="Bold" Margin="0,20,0,0"/>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="специи % к обороту на сумму" Width="180"/>
-                <TextBox Name="SpicesRubTextBox" Width="100"/>
-                <TextBlock Text="руб.   " Margin="10,0,0,0"/>
-                <TextBox Name="SpicesKopTextBox" Width="50"/>
-                <TextBlock Text="коп." Margin="10,0,0,0"/>
+                <TextBlock Text="специи % к обороту на сумму" Width="180" Margin="0,15,0,0"/>
+                <TextBox Name="SpicesRubTextBox" Width="100" Margin="0,15,0,0"/>
+                <TextBlock Text="руб.   " Margin="10,15,0,0"/>
+                <TextBox Name="SpicesKopTextBox" Width="50" Margin="0,15,0,0"/>
+                <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="соль % к обороту на сумму" Width="180"/>
-                <TextBox Name="SaltRubTextBox" Width="100"/>
-                <TextBlock Text="руб.   " Margin="10,0,0,0"/>
-                <TextBox Name="SaltKopTextBox" Width="50"/>
-                <TextBlock Text="коп." Margin="10,0,0,0"/>
+                <TextBlock Text="соль % к обороту на сумму" Width="180" Margin="0,15,0,0"/>
+                <TextBox Name="SaltRubTextBox" Width="100" Margin="0,15,0,0"/>
+                <TextBlock Text="руб.   " Margin="10,10,0,0"/>
+                <TextBox Name="SaltKopTextBox" Width="50" Margin="0,15,0,0"/>
+                <TextBlock Text="коп." Margin="10,10,0,0"/>
             </StackPanel>
 
             <!-- Подписи комиссии -->
-            <TextBlock Text="Члены комиссии:" FontWeight="Bold" Margin="0,10,0,0"/>
-            <TextBlock Text="Заведующий производством"/>
+            <TextBlock Text="Члены комиссии:" FontWeight="Bold" Margin="0,20,0,0"/>
+            <TextBlock Text="Заведующий производством" Margin="0,10,0,0"/>
             <StackPanel Orientation="Horizontal">
                 <TextBox Name="ZavodPodpisTextBox" Width="200"/>
                 <TextBlock Text="(подпись)" Margin="10,0,0,0"/>
@@ -252,7 +252,7 @@
             </StackPanel>
 
             <!-- Выручка кассы -->
-            <TextBlock Text="Выручка кассы" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="Выручка кассы" FontWeight="Bold" Margin="0,20,0,0"/>
             <StackPanel Orientation="Horizontal">
                 <TextBox Name="CashRubTextBox" Width="100"/>
                 <TextBlock Text="руб.   " Margin="10,0,0,0"/>
@@ -266,7 +266,7 @@
             </StackPanel>
 
             <!-- Приложения -->
-            <TextBlock Text="ПРИЛОЖЕНИЕ:" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="ПРИЛОЖЕНИЕ:" FontWeight="Bold" Margin="0,20,0,0"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <TextBlock Text="Накладные №" VerticalAlignment="Center"/>
                 <TextBox Name="InvoiceNumberTextBox" Width="100" Margin="5,0"/>
@@ -278,12 +278,14 @@
             </StackPanel>
 
             <!-- Акт проверки бухгалтер -->
-            <TextBlock Text="Акт проверки бухгалтер" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock Text="Акт проверки бухгалтер" FontWeight="Bold" Margin="0,30,0,0"/>
             <StackPanel Orientation="Horizontal">
-                <TextBox Name="AuditPodpisTextBox" Width="200"/>
-                <TextBlock Text="(подпись)" Margin="10,0,0,0"/>
-                <TextBox Name="AuditNameTextBox" Width="200" Margin="10,0,0,0"/>
-                <TextBlock Text="(расшифровка подписи)" Margin="10,0,0,0"/>
+                <TextBlock Text="_______________________________" Margin="0,20,0,0"/>
+                <TextBlock Text="_______________________________________________________________________" Margin="30,20,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="(подпись)" Margin="50,10,0,0"/>
+                <TextBlock Text="(расшифровка подписи)" Margin="190,10,0,60"/>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
