--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="Форма ОП-10" Height="1542" Width="1560">
+        Title="Форма ОП-10" Height="1542" Width="1520">
     
     <Window.Resources>
         <x:Array x:Key="KitchenItemsList" Type="sys:String" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -127,13 +127,13 @@
           CanUserDeleteRows="True"
           IsReadOnly="False"
           Margin="0,20,0,0"
-          Height="386"
+          Height="420"
           ColumnWidth="SizeToHeader"
           ItemsSource="{Binding KitchenItems}">
                 
 
         <DataGrid.Columns>
-        <DataGridTextColumn Header="№" Width="40" Binding="{Binding Number}" IsReadOnly="True"/>
+        <DataGridTextColumn Header="№" Width="25" Binding="{Binding Number}" IsReadOnly="True"/>
 
             <!-- Готовое изделие (встроенный список) -->
             <DataGridTemplateColumn Header="Готовое изделие" Width="200">
@@ -234,11 +234,11 @@
             <!-- Специи -->
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="специи" Width="60" Margin="0,15,0,0"/>
-                <TextBox Name="SpicesPercentTextBox" Width="40" Margin="0,15,0,0"/>
+                <TextBox Name="SpicesPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
                 <TextBlock Text="% к обороту на сумму" Margin="10,15,0,0"/>
-                <TextBox Name="SpicesRubTextBox" Width="100" Margin="10,15,0,0"/>
+                <TextBox Name="SpicesRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
                 <TextBlock Text="руб." Margin="10,15,0,0"/>
-                <TextBox Name="SpicesKopTextBox" Width="50" Margin="10,15,0,0"/>
+                <TextBox Name="SpicesKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
                 <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -249,11 +249,11 @@
             <!-- Соль -->
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="соль" Width="60" Margin="0,15,0,0"/>
-                <TextBox Name="SaltPercentTextBox" Width="40" Margin="0,15,0,0"/>
+                <TextBox Name="SaltPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
                 <TextBlock Text="% к обороту на сумму" Margin="10,15,0,0"/>
-                <TextBox Name="SaltRubTextBox" Width="100" Margin="10,15,0,0"/>
+                <TextBox Name="SaltRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
                 <TextBlock Text="руб." Margin="10,15,0,0"/>
-                <TextBox Name="SaltKopTextBox" Width="50" Margin="10,15,0,0"/>
+                <TextBox Name="SaltKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
                 <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -332,9 +332,9 @@
                 <TextBlock Text="Накладные №№" VerticalAlignment="Center"/>
                 <TextBox Name="InvoiceNumberTextBox" Width="400" Margin="5,5"/>
                 <TextBlock Text=", Сумма реализованного наложения за день" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Name="DailySumTextBoxRub" Width="140" Margin="5,5"/>
+                <TextBox Name="DailySumTextBoxRub" Width="140" Margin="5,5" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
                 <TextBlock Text="руб." VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Name="DailySumTextBoxCop" Width="50" Margin="5,5"/>
+                <TextBox Name="DailySumTextBoxCop" Width="50" Margin="5,5" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
                 <TextBlock Text="коп." Margin="5,5,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
