--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -234,11 +234,13 @@
             <!-- Специи -->
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="специи" Width="60" Margin="0,15,0,0"/>
-                <TextBox Name="SpicesPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
+                <TextBox Name="SpicesPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="IntegerRange0To100_PreviewTextInput"
+         LostFocus="IntegerRange0To100_LostFocus"/>
                 <TextBlock Text="% к обороту на сумму" Margin="10,15,0,0"/>
-                <TextBox Name="SpicesRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
+                <TextBox Name="SpicesRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="IntegerOnly_PreviewTextInput"/>
                 <TextBlock Text="руб." Margin="10,15,0,0"/>
-                <TextBox Name="SpicesKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
+                <TextBox Name="SpicesKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="IntegerCop_PreviewTextInput"
+         LostFocus="IntegerCop_LostFocus"/>
                 <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -249,11 +251,13 @@
             <!-- Соль -->
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="соль" Width="60" Margin="0,15,0,0"/>
-                <TextBox Name="SaltPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
+                <TextBox Name="SaltPercentTextBox" Width="40" Margin="0,15,0,0" PreviewTextInput="IntegerRange0To100_PreviewTextInput"
+         LostFocus="IntegerRange0To100_LostFocus"/>
                 <TextBlock Text="% к обороту на сумму" Margin="10,15,0,0"/>
-                <TextBox Name="SaltRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
+                <TextBox Name="SaltRubTextBox" Width="100" Margin="10,15,0,0" PreviewTextInput="IntegerOnly_PreviewTextInput"/>
                 <TextBlock Text="руб." Margin="10,15,0,0"/>
-                <TextBox Name="SaltKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
+                <TextBox Name="SaltKopTextBox" Width="50" Margin="10,15,0,0" PreviewTextInput="IntegerCop_PreviewTextInput"
+         LostFocus="IntegerCop_LostFocus"/>
                 <TextBlock Text="коп." Margin="10,15,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -297,10 +301,10 @@
 
             <!-- Выручка кассы -->
             <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                <TextBlock Text="Выручка кассы" Margin="0,5"/>
-                <TextBox Name="CashRubTextBox" Width="100" Margin="5,5"/>
+                <TextBlock Text="Выручка кассы" Margin="0,5,10,0"/>
+                <TextBox Name="CashRubTextBox" Width="400" Margin="5,5"/>
                 <TextBlock Text="руб.   " Margin="5,5"/>
-                <TextBox Name="CashKopTextBox" Width="50" Margin="5,5"/>
+                <TextBox Name="CashKopTextBox" Width="300" Margin="5,5"/>
                 <TextBlock Text="коп." Margin="5,5"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -332,9 +336,10 @@
                 <TextBlock Text="Накладные №№" VerticalAlignment="Center"/>
                 <TextBox Name="InvoiceNumberTextBox" Width="400" Margin="5,5"/>
                 <TextBlock Text=", Сумма реализованного наложения за день" VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Name="DailySumTextBoxRub" Width="140" Margin="5,5" PreviewTextInput="OnlyNumbers_PreviewTextInput"/>
+                <TextBox Name="DailySumTextBoxRub" Width="140" Margin="5,5" PreviewTextInput="IntegerOnly_PreviewTextInput"/>
                 <TextBlock Text="руб." VerticalAlignment="Center" Margin="5,0"/>
-                <TextBox Name="DailySumTextBoxCop" Width="50" Margin="5,5" PreviewTextInput="Percentage_PreviewTextInput" LostFocus="Percentage_LostFocus"/>
+                <TextBox Name="DailySumTextBoxCop" Width="50" Margin="5,5" PreviewTextInput="IntegerCop_PreviewTextInput"
+         LostFocus="IntegerCop_LostFocus"/>
                 <TextBlock Text="коп." Margin="5,5,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
